2022-10-20 Jan Kotanski <jankotan@gmail.com>
	* expose ScanCommand in scientific metadata (#359)
	* add tango datasource template of PYEVAL type (#361)
	* tagged as v3.29.0

2022-10-12 Jan Kotanski <jankotan@gmail.com>
	* update ownerGroup and accessGroups (#352)
	* update sources for dataset metadata values (#354)
	* tagged as v3.28.1

2022-09-13 Jan Kotanski <jankotan@gmail.com>
	* add chmod options to nxsfileinfo
	* tagged as v3.28.0

2022-08-24 Jan Kotanski <jankotan@gmail.com>
	* add 1d metadata to nxsfileinfo
	* tagged as v3.27.0

2022-08-22 Jan Kotanski <jankotan@gmail.com>
	* fix detector paths in nxsfileinfo origdatablock by relative scanpath
	* tagged as v3.26.1

2022-08-22 Jan Kotanski <jankotan@gmail.com>
	* accept more than one path in nxsfileinfo origdatablock
	* tagged as v3.26.0

2022-08-15 Jan Kotanski <jankotan@gmail.com>
	* add haspp022chms host (#336)
	* tagged as v3.25.1

2022-08-15 Jan Kotanski <jankotan@gmail.com>
	* add description and descriptiontext components (#332)
	* add PaNET ontology techniques in nxsfileinfo metadata (#330)
	* fix compatibility issues with nxsdatawriter (#330)
	* tagged as v3.25.0

2022-08-11 Jan Kotanski <jankotan@gmail.com>
	* add support for techniques (#326)
	* change nexus units to scicat unit (#324)
	* tagged as v3.24.0

2022-07-14 Jan Kotanski <jankotan@gmail.com>
	* rebuild package with /usr/bin/env
	* change repository name from tools to nxstools
	* tagged as v3.23.1

2022-07-14 Jan Kotanski <jankotan@gmail.com>
	* add support for ownerGroup and accessGroups in nxsfileinfo metadata/origdatablocks
	* change default posfix-group from Parameters to ""
	* add -r relative path to  nxsfileinfo metadata/origdatablocks
	* change rename -r to -m options
	* tagged as v3.23.0

2022-07-05 Jan Kotanski <jankotan@gmail.com>
	* add proposal as proposal option for nxsfileinfo metadata
	* apply fixes proposed by Markus Z.
	* tagged as v3.22.0

2022-06-29 Jan Kotanski <jankotan@gmail.com>